Firefox .article-list fix (grid row gap).

--- a/resources/scss/_layout.scss
+++ b/resources/scss/_layout.scss
@@ -383,6 +383,7 @@ footer {
     display: grid;
     grid-template-columns: 45% 45%;
     grid-gap: 10%;
+    grid-row-gap: 0;
 }
 .article {
     display: inline-block;
